# SmartCar

./: .gitignore  CMakeLists.txt  README.md  main.cpp
car_app/: CMakeLists.txt
car_app/app/: CMakeLists.txt  main.cpp
car_app/app/behaviors/: test_do_once.xml  test_follow_lane.xml
car_app/app/include/: controller.h  icontroller.h  iimagesender.h  imagesender.h  timeline.h
car_app/app/src/: controller.cpp  imagesender.cpp  main.cpp  timeline.cpp
car_app/behavior/: CMakeLists.txt
car_app/behaviors/: CMakeLists.txt
car_app/behaviors/include/: avoid.h  avoidernotblocked.h  customporttypes.h  doonce.h  dooncemanager.h  move.h  noobstacleinfront.h
car_app/behaviors/src/: avoid.cpp  avoidernotblocked.cpp  doonce.cpp  dooncemanager.cpp  move.cpp  noobstacleinfront.cpp
car_app/camera/: CMakeLists.txt
car_app/camera/include/: frame.h  icamera.h  iimageprocessor.h  imageprocessor.h  lccamera.h  picamera.h
car_app/camera/src/: cameraworker.cpp  cameraworker.h  imageprocessor.cpp  lccamera.cpp  picamera.cpp
car_app/peripherals/: CMakeLists.txt
car_app/peripherals/include/: icamera.h  iframe.h  iirsensor.h  imotoractuator.h  irsensor.h  iussensor.h  motoractuator.h  picamera.h  ussensor.h
car_app/peripherals/src/: cameraworker.cpp  cameraworker.h  irsensor.cpp  lccamera.cpp  motoractuator.cpp  picamera.cpp  ussensor.cpp  usthread.cpp  usthread.h  usworker.cpp  usworker.h
car_app/services/: CMakeLists.txt
car_app/services/include/: avoider.h  doublelinetracer.h  iavoider.h  iirobstacledetector.h  iirvectorservice.h  ilinetracer.h  imovement.h  irobstacledetector.h  iusobstacledetector.h  movement.h  obstacleavoider.h  usobstacledetector.h  vector.h
car_app/services/src/: avoider.cpp  doublelinetracer.cpp  irobstacledetector.cpp  movement.cpp  obstacleavoider.cpp  usobstacledetector.cpp
car_app/training_app/: CMakeLists.txt
car_app/training_app/include/: controller.h
car_app/training_app/src/: controller.cpp  main.cpp
client_app/: CMakeLists.txt
client_app/app/: CMakeLists.txt
client_app/app/include/: controller.h  iimagereceiver.h  imagereceiver.h
client_app/app/qml/: Main.qml
client_app/app/src/: controller.cpp  imagereceiver.cpp  main.cpp  remotemovement.cpp  streampreview.cpp
client_app/training/include/: controller.h
client_app/training/qml/: Main.qml
client_app/training/src/: controller.cpp  main.cpp
client_app/training_app/: CMakeLists.txt
client_app/training_app/include/: streampreview.h  trainingcontroller.h
client_app/training_app/src/: main.cpp  trainingcontroller.cpp
cmake/: FindRaspicam.cmake  FindTensorFlow.cmake  FindWiringPI.cmake
common/: CMakeLists.txt
common/imageproc/: CMakeLists.txt
common/imageproc/include/: abstractprocessstage.h  iimageprocessor.h  imageprocessor.h
common/imageproc/src/: imageprocessor.cpp
common/include/: common.h  frame.h  vector.h
common/iperipherals/: CMakeLists.txt
common/iperipherals/include/: iirsensor.h  imotoractuator.h  isensor.h  iussensor.h
common/iperipherals/src/: iirsensor.cpp  iussensor.cpp
common/network/: CMakeLists.txt
common/network/include/: commander.h  commandreceiver.h  icommander.h  icommandreceiver.h  iimagereceiver.h  imagereceiver.h  imagesender.h  remotemovement.h  rmovecontroller.h
common/network/src/: commander.cpp  commandreceiver.cpp  constants.h  imagereceiver.cpp  imagesender.cpp  imagesenderworker.cpp  imagesenderworker.h  remotemovement.cpp  rmovecontroller.cpp
common/services/: CMakeLists.txt
common/services/include/: debugmovement.h
common/services/src/: debugmovement.cpp  movement.cpp  obstacleavoider.cpp  usobstacledetector.cpp
common/utils/: CMakeLists.txt
common/utils/include/: common.h  frame.h  utilities.h  vector.h
