#*************************************************************************
#*
#*   @author Doniyorbek Tokhirov <tokhirovdoniyor@gmail.com>
#*   @date 24/02/2022
#*
#*************************************************************************

# ==== SUBMODULES =========================================

add_subdirectory(utils)
add_subdirectory(services)
add_subdirectory(iperipherals)
add_subdirectory(network)
add_subdirectory(imageproc)
